--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>WebDevChallenge - Front-end Developer - Łukasz Grabowski</title>
+    <script src="https://skrypt-cookies.pl/id/8e2a4385ddee3d6c.js"></script>
   </head>
   <body>
     <noscript>
