--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta name="description" content="Łukasz Grabowski - Portfolio" />
+    <meta name="keywords" content="Strony internetowe, projekty, witryny, Mława, Pomorskie, Trójmiasto, Gdańsk, Gdynia, Sopot">
+    <meta property="og:title" content="WebDevChallenge - Front-end Developer - Łukasz Grabowski">
+		<meta property="og:url" content="https://www.webdevchallenge.pl">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
